--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -5,3 +5,49 @@
     clear: both;
   }
 }
+
+@mixin center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* MEDIA QUERY MANAGER
+$breakpoint arguments choices:
+-phone
+-tab-port
+-tab-land
+-big-desktop
+
+ORDER :base + typography > general layout  + grid> page layout > component
+
+1em = 16px
+*/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      //600px
+      @content;
+    }
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      //900px
+      @content;
+    }
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      //1200px
+      @content;
+    }
+  }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      //1800
+      @content;
+    }
+  }
+}
