--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,7 +8,26 @@
 html {
   // What one rem is !!
   font-size: 62.5%; /* 10/16 = .625 multiply by 100 => 62.5% */
+
+  @include respond(tab-port) {
+    font-size: 50%; // 1 rem = 8px , 8/16 = 50%
+  }
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1 rem = 9px , 9/16 = 56.25%
+  }
+  @include respond(big-desktop) {
+    font-size: 75%; // 1 rem = 12px , 8/16 = 75%
+  }
 }
 body {
   box-sizing: border-box; /* slightly better practice*/
+  padding: 3rem;
+  @include respond(tab-port) {
+    padding: 0;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
