--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,6 @@ body {
   /* font-size: 16px; */
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 
 .heading-primary {
@@ -22,7 +21,10 @@ body {
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
-
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
     /* animation-delay: 3s;
         animation-iteration-count: 3; */
   }
@@ -34,6 +36,9 @@ body {
     animation-name: moveInRight;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -51,6 +56,13 @@ body {
     $color-primary-light,
     $color-primary-dark
   );
+  @include respond(tab-port) {
+    font-size: 2.5rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2rem;
+  }
   &:hover {
     transform: skewX(15deg) skewY(2deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
